--- a/poultryitems/static/poultryitems/css/index.css
+++ b/poultryitems/static/poultryitems/css/index.css
@@ -10,7 +10,7 @@
         color: white;
         text-align: center;
         margin-top: 15px;
-    }
+    } 
     
     .hero-video {
         position: absolute;
@@ -149,7 +149,7 @@
         display: flex;
         flex-wrap: wrap;
         align-items: center;
-        gap: 50px;
+        gap: 40px;
     }
     
     .training-content {
@@ -259,14 +259,63 @@
     /* Responsive Adjustments */
     @media (max-width: 768px) {
         .hero h1 {
-            font-size: 2.5rem;
+            font-size: 2rem;
+            line-height: 1;
         }
         
         .hero p {
-            font-size: 1.2rem;
+            line-height: 1;
+            font-size: 1rem;
+            margin-bottom: 5px;
         }
         
         .training-container {
             flex-direction: column;
         }
+        .hero {
+        height: 45vh;
+        margin-top: 2px;
+    } 
+    .cta-button {
+        padding: 5px 10px;
+        background-color: #2599b6ff;
+        border-radius: 50px;
+        font-size: 1rem;
+    }
+    .services {
+        padding: 20px 10px;
+    }
+    
+    .section-title {
+        margin-bottom: 5px;
+        font-size: 1.5rem;
+    }
+
+    /* */
+    
+    .training-content {
+        min-width: 300px;
+    }
+    
+    .training-image {
+        min-width: 150px;
+        border-radius: 10px;
+    }
+    
+    .training-image img {
+        width: 100%;
+    }
+    
+    .training h2 {
+        font-size: 1rem;
+        margin-bottom: 10px;
+        line-height: 1;
+    }
+    
+    .training p {
+        font-size: 0.7rem;
+        line-height: 1;
+        margin-bottom: 20px;
+    }
+
     }
