--- a/base/templates/base/base.html
+++ b/base/templates/base/base.html
@@ -123,14 +123,28 @@
         <button class="nav-close-btn" id="navCloseBtn" aria-label="Close navigation">
             <i class="fas fa-times"></i>
         </button>
-    </div>
+    </div>        
     <ul class="category-nav-list">
-        <li class="category-nav-item {% if request.resolver_match.app_name == 'vehicles' %}active{% endif %}">
-            <a href="{% url 'vehicles:vehicle_list' %}" class="category-nav-link">
+        <li class="category-nav-item has-dropdown">
+            <a href="#" class="category-nav-link dropdown-toggle" aria-expanded="false" aria-controls="carMenu">
                 <i class="fas fa-car"></i>
-                <span class="link-text">{% trans "Cars" %}</span>
+                <span class="link-text">{% trans " Car Section" %}</span>
+                <i class="fas fa-chevron-down dropdown-arrow"></i>
             </a>
-            <!-- category-nav-dropdown f -->
+             <ul id="carMenu" class="category-nav-dropdown">
+                <li class="category-nav-item">
+                    <a href="{% url 'vehicles:vehicle_list' %}" class="category-nav-link">
+                        <i class="fas fa-list"></i>
+                        <span class="link-text">{% trans "All Cars" %}</span>
+                    </a>
+                </li>
+                <li class="category-nav-item">
+                    <a href="{% url 'vehicles:vehicle_add' %}" class="category-nav-link">
+                        <i class="fas fa-user-tie"></i>
+                        <span class="link-text">{% trans "Add car" %}</span>
+                    </a>
+                </li>
+            </ul>
         </li>
         <li class="category-nav-item {% if request.resolver_match.app_name == 'houses' %}active{% endif %}">
             <a href="{% url 'houses:house_list' %}" class="category-nav-link">
